--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ color: white;
 .All{
     font-size: 20px;
 }
-.tetet{
+.teet{
     background-color: white;
 }
  
@@ -141,6 +141,10 @@ color: white;
         height: 10vh;
         margin-left: -100px;
         margin-top: -100px;
+    }
+    .teet{
+        background-color: white;
+        overflow-x: hidden; 
     }
     
 }
